mene card k border ka color change kara hai

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ h1{
 .card{
     width: 300px;
     height: max-content;
-    border: 1px solid black;
+    border: 1px solid rgb(255, 0, 0);
     border-radius: 16px;
     padding: 10px 15px;
     display: flex;
